<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Power Up</string>
    <string name="action_settings">Settings</string>
    <string name="house">School</string>
    <string name="boyfriend">Home</string>
    <string name="hospital">Hospital</string>
    <string name="school">Library</string>
    <string name="powerup">"PowerUp"</string>
    <string name="completed_scene">This scene is completed Darling.\n\n
        Please go back to the map or buy exciting things from the store</string>
    <string name="completed_game">Wow! You are brilliant.\n\nGame completed !!</string>
    <string name="map">Map</string>
    <string name="store">Store</string>
    <string name="enter">Continue..</string>
    <string name="back_to_map">Back to Map</string>
    <string name="preferences_has_previously_started">has_previously_started</string>
    <string name="preferences_has_previously_customized">has_previously_customized</string>
    <string name="avatar">"Here is your final Avatar!\nPress continue to start\n your journey.."</string>
    <string name="avatar_land">"Here is your final Avatar! Press continue to start\n your journey.."</string>
    <string name="select_feature_coins">"10 coins"</string>
    <string name="pgame_scenario_hint">"Scenario Name"</string>
    <string name="back_button"><b>"Back"</b></string>
    <string name="select_feature">"Choose your feature.."</string>
    <string name="from_activity">"fromActivity"</string>
    <string name="eye">"eyes"</string>
    <string name="hair">"hair"</string>
    <string name="cloth">"dress_avatar"</string>
    <string name="lowercase_skin">"skin"</string>
    <string name="face">"face"</string>
    <string name="accessory">"accessory"</string>
    <string name="accessories">"acc_avatar"</string>
    <string name="bag">"bag"</string>
    <string name="hat">"hat"</string>
    <string name="necklace">"necklace"</string>
    <string name="glasses">"glasses"</string>
    <string name="feature">"feature"</string>
    <string name="select_feature_title">"Choose your "</string>
    <string name="avatar_room_eye">"EYES"</string>
    <string name="avatar_room_hair">"HAIR"</string>
    <string name="avatar_room_face">"FACE"</string>
    <string name="avatar_room_cloth">"CLOTHES"</string>
    <string name="paid_feature">"***Paid***"</string>
    <string name="paid_feature_small">"**Paid**"</string>
    <string name="empty">""</string>
    <string name="scene">"Scene"</string>
    <string name="points_check">"Not enough points"</string>
    <string name="scenario_description">Scenario description</string>
    <string name="points">points</string>
    <string name="question">Question</string>
    <string name="about_title">About</string>
    <string name="about_game_section_title"><![CDATA[> The Game]]></string>
    <string name="about_game_section_content">PowerUp is an educational choose-your-own-adventure game for girls between the age of 12 and 14. The game consists of different scenarios in which the user can choose between multiple answers and thereby lead the conversation into different directions. The user can create a personalized avatar by choosing clothes, hair, eye and skin color. Later on the avatar can be further customized and other accessories can be bought using points earned in the scenarios. Additional mini games contain key information surrounding reproductive health and provide a break from the storyline.</string>
    <string name="about_urgency_section_content">Increased exposure among preadolescents aged 12-14 to sexualized media has normalized engagement in sexual activity at younger ages. However information regarding sex is not very accessible to preadolescents. Only 65% of schools provide sex education and even less explain condom use. Having "the talk" at home is usually very awkward. Preadolescent girls need better options for reproductive health and self-esteem education. They are at risk for possible pregnancy and spread of sexually transmitted infection (STI), yet very little information reaches preadolescents about risk and responsibility associated with sex. Additionally, preadolescents struggle with self-esteem, which makes them vulnerable to peer and media influence. Current trends in sexual activity among preadolescents impact the economy, hurt family cohesion, affect female education, and burden healthcare systems.</string>
    <string name="about_urgency_section_title"><![CDATA[> Why this App is needed]]></string>
    <string name="about_how_app_helps_section_title"><![CDATA[> How does PowerUp help teenagers?]]></string>
    <string name="about_how_app_helps_section_content">The app uses Social and Emotional Learning (SEL) to empower middle school girls to take ownership of their health and sexual activity. It is designed to increase access to reproductive health and self-esteem education by incorporating quality and relevant information surrounding those topics and it helps concretize corresponding concepts through interactive activities. The Content is based on SEL Core Competencies (Self-awareness, Self-management, Social awareness, Relationship skills, Decision making).</string>
    <string name="new_user_text"><b>New User</b></string>
    <string name="resume_text">Resume</string>
    <string name="start_text"><b>Start</b></string>
    <string name="about_text"><b>About</b></string>
    <string name="continue_text"><b>Continue</b></string>
    <string name="replay"><b>Replay</b></string>
    <string name="ok" />
    <string name="create_avatar">\"Create new Avatar\"</string>
    <string name="ok_msg">Create new Avatar</string>
    <string name="start_dialog_message">If you start a new game, previous data and all karma points will be lost !</string>
    <string name="start_title_message">Are you Sure ?</string>
    <string name="start_confirm_message">Create new Avatar</string>
    <string name="purchase_confirm_title">Warning</string>
    <string name="purchase_confirm_message">Are you sure you want to purchase this item? You will be spending %d points and the purchase can\'t be reverted</string>
    <string name="purchase_confirm_ok">Purchase</string>
    <string name="purchase_confirm_cancel">Maybe not</string>
    <string name="purchase_success_title">Yay!</string>
    <string name="purchase_success_message">The purchase is successful!</string>
    <string name="purchase_success_ok">OK</string>
    <string name="current_scenario_name">Current Scenario: %s</string>
    <string name="scenario_over_dialog_message1">You gained\u0020</string>
    <string name="scenario_over_title_message">Hooray!</string>
    <string name="scenario_over_confirm_message">OK</string>
    <string name="scenario_over_dialog_message2">\u0020karma points</string>
    <string name="toast_confirm_exit_message">Press once more to exit</string>
    <string name="start_dialog_message_load">You have no previous karma points. Click on NEW GAME to begin</string>
    <string name="start_title_message_load">No previous Karma Points !</string>
    <string name="start_confirm_message_load">Dismiss</string>
    <string name="game_to_map_message">If you migrate to map, current scene karma points will be lost</string>
    <string name="game_confirm_message">Go to Map</string>
    <string name="marcello_Text">Marcello</string>
    <string name="score_text_zero">Score: 0</string>
    <string name="pregame_setup_title">In this step you can choose the members of the conversations!</string>
    <string name="elder_sister">SISTER</string>
    <string name="friend">FRIEND</string>
    <string name="doctor">DOCTOR</string>
    <string name="teacher">TEACHER</string>
    <string name="cancel">Cancel</string>
    <string name="npc_label">Sister</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="sister">Sister</string>
    <string name="brother">Brother</string>
    <string name="none">None</string>
    <string name="guardian">Guardian</string>
    <string name="required">Required</string>
    <string name="choose_member">Choose one character!</string>
    <string name="pregame_warning_message">To proceed in the game you need to choose atleast one character</string>
    <string name="time">Time: </string>
    <string name="txt_zero">00</string>
    <string name="memory_label">Does the tile on the left match the tile that appeared before it?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="tutorial_1">Shoot the viruses with the syringe!</string>
    <string name="tutorial_2">The color of the syringe should match with the color of the virus otherwise you loose!</string>
    <string name="tutorial_3">Try to kill as many viruses as possible before the time runs out!</string>
    <string name="score_kill_the_virus">kill the virus score</string>
    <string name="memory_tutorial_1">Memorize and match the tile on the left with the tile that appeared one tile before it</string>
    <string name="memory_tutorial_2">Press yes or no depending upon the answer</string>
    <string name="memory_tutorial_3">Try to get maximum number of correct answers before the time runs out!</string>
    <string name="txt_three_zero">30</string>
    <string name="lives_label">Lives:</string>
    <string name="txt_3">3</string>
    <string name="save_the_blood_label">Presented Situation 1</string>
    <string name="txt_answer_correct">Answer = Correct</string>
    <string name="txt_answer_wrong">Answer = Wrong</string>
    <string name="txt_answer_neutral">Answer = Neutral</string>
    <string name="hs_eyes">hs_eyes</string>
    <string name="hs_skin">hs_skin</string>
    <string name="hs_dress_avatar">hs_dress_avatar</string>
    <string name="hs_hair">hs_hair</string>
    <string name="hs_acc">hs_acc</string>
    <string name="save_blood_tutorial_1">Choose the answers that you think might fit the situation!</string>
    <string name="save_blood_tutorial_2">Every correct answer will increase the level of blood!</string>
    <string name="save_blood_tutorial_3">Try to choose all the correct options before the time runs out!</string>
    <string name="msg1_level_complete">Happy Birthday! You have completed the middle school level!</string>
    <string name="msg2_level_complete">Congratulations! Let\'s now proceed to high school.</string>
    <string name="f">F</string>
    <string name="score0">Score: 0</string>
    <string name="zero">0</string>
    <string name="t">T</string>
    <string name="q">Q</string>
    <string name="pimples">Pimples</string>
    <string name="bra">Bra</string>
    <string name="periods">Periods</string>
    <string name="skin">Skin</string>
    <string name="eyes">Eyes</string>
    <string name="clothes">Clothes</string>
    <string name="final_avatar_message">This is your final avatar! Press continue to start your Journey...</string>
    <string name="better_success_rate"><![CDATA[=> Better Success Rate]]></string>
    <string name="cheapest_contraceptive"><![CDATA[=> Cheapest Contraceptive]]></string>
    <string name="no_protection_against_stds"><![CDATA[=> No protection against STDs]]></string>
    <string name="str_5">5</string>
</resources>
