<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="powerup.systers.com.StartActivity">

    <TextView
        android:id="@+id/powerupTextView"
        android:layout_width="@dimen/powerup_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/powerup"
        android:textAlignment="center"
        android:textSize="@dimen/powerup_size"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/powerup_icon_width"
        android:layout_height="@dimen/powerup_icon_height"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/startButtonMain"
        android:layout_width="@dimen/start_button_width"
        android:layout_height="@dimen/start_button_height"
        android:background="@drawable/brown_button_background"
        android:text="@string/start_text"
        android:textSize="@dimen/button_font"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newUserButtonFirstPage"
        android:layout_width="@dimen/new_user_button_width"
        android:layout_height="@dimen/new_user_button_height"
        android:background="@drawable/brown_button_background"
        android:text="@string/new_user_text"
        android:textSize="@dimen/button_font" />

    <Button
        android:id="@+id/aboutButtonMain"
        android:layout_width="@dimen/about_button_width"
        android:layout_height="@dimen/about_button_height"
        android:background="@drawable/brown_button_background"
        android:text="@string/about_text"
        android:textSize="@dimen/button_font" />

</LinearLayout>
