<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_save_blood">

    <include
        layout="@layout/activity_save_the_blood_game"/>

    <TextView
        android:id="@+id/save_blood_txt_tutorial_1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:padding="@dimen/margin_small"
        android:text="@string/save_blood_tutorial_1"
        android:textColor="@color/powerup_dark_blue"
        android:textSize="@dimen/txt_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/save_blood_txt_tutorial_2"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:padding="@dimen/margin_small"
        android:text="@string/save_blood_tutorial_2"
        android:textColor="@color/powerup_dark_blue"
        android:textSize="@dimen/txt_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/save_blood_txt_tutorial_3"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:padding="@dimen/margin_small"
        android:text="@string/save_blood_tutorial_3"
        android:textColor="@color/powerup_dark_blue"
        android:textSize="@dimen/txt_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>